--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "files": [
     "lib/mod.js"
   ],
-  "module": "./lib/mod.js"
+  "module": "./lib/mod.js",
+  "scripts": {
+    "start": "web-dev-server --open --watch"
+  },
+  "dependencies": {
+    "web-dev-server": "^3.0.27"
+  }
 }
